# rozert-pay

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yaml  manage.py  mypy.ini  pylintrc  pyproject.toml  pytest.ini  swagger.json  swagger.yml
code_checks/: correct_imports.py
rozert_pay/: __init__.py  api_schema.py  asgi.py  celery_app.py  settings.py  settings_unittest.py  urls.py  wsgi.py
rozert_pay/account/: models.py
rozert_pay/account/migrations/: 0001_initial.py
rozert_pay/common/: const.py  middlewares.py  models.py  slack.py  types.py
rozert_pay/common/helpers/: admin_utils.py  cache.py  celery_utils.py  db_searching_utils.py  log_utils.py  string_utils.py  validation_mexico.py
rozert_pay/payment/: apps.py  controller_registry.py  entities.py  factories.py  models.py  tasks.py  types.py
rozert_pay/payment/api_v1/: urls.py  views.py
rozert_pay/payment/extra_fields/: wallet_extra_fields.py
rozert_pay/payment/migrations/: 0001_initial.py
rozert_pay/payment/services/: base_classes.py  context.py  customers.py  db_services.py  deposit_instructions.py  deposit_services.py  errors.py  event_logs.py  external_api_services.py  incoming_callbacks.py  outcoming_callbacks.py  sandbox_services.py  transaction_actualization.py  transaction_processing.py  transaction_set_status.py  transaction_status_validation.py  withdraw_services.py  (+1 more)
staticfiles/: main-0ab684fcb82cee99fb85.js  main-1a92ec061fe260eb3d89.js  main-9c72fa24b10a0a487d61.js  main-ac3c88a8a5ff1945787c.js  main-c88536d0c0b247919a91.js  main-ec9a512779712bf95052.js  main-f754eb835bff2839905b.js  webpack-stats.json
stubs/django_object_actions/: __init__.pyi
stubs/factory/: __init__.pyi  django.pyi
(+13 files in other folders)
